dummy/deployment_fromguestbook.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: students-backend
  labels:
    app: students
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: students
      tier: backend
  template:
    metadata:
      labels:
        app: students
        tier: backend
    spec:
     containers:
      - name: backend
        image: gcr.io/mycal-255414/students-backend
        ports:
        - name: http-server
          containerPort: 8000
